[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/SkillNode.gd" type="Script" id=1]

[node name="SkillNode" type="MarginContainer"]
margin_right = 450.0
margin_bottom = 100.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = 10.0
margin_top = 10.0
margin_right = 440.0
margin_bottom = 90.0
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Button"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -200.0
margin_top = 20.0
margin_right = 200.0
margin_bottom = 60.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="SkillName" type="Label" parent="Button/HBoxContainer"]
margin_top = 13.0
margin_right = 42.0
margin_bottom = 27.0
text = "Heal - "

[node name="SkillDesc" type="Label" parent="Button/HBoxContainer"]
margin_left = 46.0
margin_top = 4.0
margin_right = 403.0
margin_bottom = 35.0
text = "Uses aetherial conjuration to restore 25% of targets HP.
Further upgrades could result in more potent heals"
